# FastSBE

./: .clang-format  .clang-tidy  .gitignore  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md  build_and_test.sh  defs.bzl  run_tests.sh
.github/workflows/: cmake.yml
FastSBE/: EnumGen.py  FastSBE.py  FileGen.py  GroupGen.py  MessageGen.py  Metadata.py  Parser.py  SetGen.py  VariableLengthDataGen.py
FastSBE/metadata/c++/composite/: composite_field_def.h  const_enum_field_def.h  const_numeric_field_def.h  const_string_field_def.h  constructor_def.h  enum_field_def.h  numeric_field_def.h  set_field_def.h  string_field_def.h
FastSBE/metadata/c++/message/: buffer_def.h  composite_field_def.h  const_enum_field_def.h  const_numeric_field_def.h  const_string_field_def.h  encoded_size_def.h  encoded_size_fixed_def.h  enum_field_def.h  group_def.h  group_def_4.h  group_def_extended.h  group_qualifier_def.h  message_def.h  nested_group_def.h  nested_group_def_4.h  nested_group_def_extended.h  nested_variable_length_data_def.h  numeric_field_def.h  ostream_field_def.h  ostream_field_def_begin.h  ostream_field_def_end.h  ostream_group_def_begin.h  ostream_group_def_end.h  ostream_group_field_def.h  ostream_message_def_begin.h  ostream_var_len_data_def_ct.h  ostream_variable_length_data_def.h  padding_def.h  sbe_message.h  set_field_def.h  string_field_def.h  variable_length_data_def.h
test/: CMakeLists.txt
test/benchmark/: CMakeLists.txt  fastsbe_benchmark.h
test/benchmark/FastSbe/fastsbe/: BusinessMessageReject.h  BusinessRejectReasonEnum.h  DATA.h  Data.h  ExecTypeEnum.h  ExecutionReport.h  GroupSizeEncoding.h  MONTHYEAR.h  MessageHeader.h  MonthYear.h  NewOrderSingle.h  OptionalDecimalEncoding.h  OrdStatusEnum.h  OrdTypeEnum.h  PartyIDSourceEnum.h  PartyRoleEnum.h  QtyEncoding.h  SideEnum.h
test/benchmark/cme/: CMakeLists.txt  MDIncrementalRefreshBook46Data.h  benchmark_test.cpp  fastsbe_benchmark.h  sbetool_benchmark.h  validation_test.cpp
test/benchmark/cme/fastsbe/: AdminHeartbeat12.h  AdminLogin15.h  AdminLogout16.h  AggressorFlag.h  AggressorSide.h  ChannelReset4.h  CollateralMarketValue62.h  Decimal9.h  Decimal9NULL.h  DecimalQty.h  EventType.h  GroupSize.h  GroupSize8Byte.h  GroupSizeEncoding.h  HaltReason.h  InstAttribValue.h  LegSide.h  MDEntryType.h  MDEntryTypeBook.h  MDEntryTypeDailyStatistics.h  MDEntryTypeStatistics.h  MDIncrementalRefreshBook46.h  MDIncrementalRefreshBookLongQty64.h  MDIncrementalRefreshDailyStatistics49.h  MDIncrementalRefreshLimitsBanding50.h  MDIncrementalRefreshOrderBook47.h  MDIncrementalRefreshSessionStatistics51.h  MDIncrementalRefreshSessionStatisticsLongQty67.h  MDIncrementalRefreshTradeSummary48.h  MDIncrementalRefreshTradeSummaryLongQty65.h  MDIncrementalRefreshVolume37.h  MDIncrementalRefreshVolumeLongQty66.h  MDInstrumentDefinitionFX63.h  MDInstrumentDefinitionFixedIncome57.h  MDInstrumentDefinitionFuture54.h  MDInstrumentDefinitionOption55.h  MDInstrumentDefinitionRepo58.h  MDInstrumentDefinitionSpread56.h  MDUpdateAction.h  MatchEventIndicator.h  (+27 more)
test/benchmark/cme/sbetool/: AdminHeartbeat12.h  AdminLogin15.h  AdminLogout16.h  AggressorFlag.h  AggressorSide.h  ChannelReset4.h  CollateralMarketValue62.h  Decimal9.h  Decimal9NULL.h  DecimalQty.h  EventType.h  GroupSize.h  GroupSize8Byte.h  HaltReason.h  InstAttribValue.h  LegSide.h  MDEntryType.h  MDEntryTypeBook.h  MDEntryTypeDailyStatistics.h  MDEntryTypeStatistics.h  MDIncrementalRefreshBook46.h  MDIncrementalRefreshBookLongQty64.h  MDIncrementalRefreshDailyStatistics49.h  MDIncrementalRefreshLimitsBanding50.h  MDIncrementalRefreshOrderBook47.h  MDIncrementalRefreshSessionStatistics51.h  MDIncrementalRefreshSessionStatisticsLongQty67.h  MDIncrementalRefreshTradeSummary48.h  MDIncrementalRefreshTradeSummaryLongQty65.h  MDIncrementalRefreshVolume37.h  MDIncrementalRefreshVolumeLongQty66.h  MDInstrumentDefinitionFX63.h  MDInstrumentDefinitionFixedIncome57.h  MDInstrumentDefinitionFuture54.h  MDInstrumentDefinitionOption55.h  MDInstrumentDefinitionRepo58.h  MDInstrumentDefinitionSpread56.h  MDUpdateAction.h  MatchEventIndicator.h  MaturityMonthYear.h  (+25 more)
test/benchmark/fixp/: CMakeLists.txt  benchmark_fastsbe.h  benchmark_test.cpp  fastsbe_benchmark.h  sbetool_benchmark.h  validation_test.cpp
test/benchmark/fixp/fastsbe/: BusinessMessageReject.h  BusinessRejectReasonEnum.h  Data.h  ExecTypeEnum.h  ExecutionReport.h  GroupSizeEncoding.h  MessageHeader.h  MonthYear.h  NewOrderSingle.h  OptionalDecimalEncoding.h  OrdStatusEnum.h  OrdTypeEnum.h  PartyIDSourceEnum.h  PartyRoleEnum.h  QtyEncoding.h  SideEnum.h
test/encode_decode/cme/: CMakeLists.txt
test/encode_decode/fixp/: CMakeLists.txt
test/encode_decode/fixp/sbe-v1/: README.md
test/encode_decode/fixp/sbe-v2-0-RC3/: CMakeLists.txt  composite_enum_field.cpp  composite_layout.cpp  composite_numeric_field.cpp  composite_ostream.cpp  composite_set_field.cpp  composite_string_field.cpp  encode_decode.cpp  example-schema.xml  message_data_field.cpp  message_enum_field.cpp  message_group.cpp  message_layout.cpp  message_numeric_field.cpp  message_ostream.cpp  message_set_field.cpp  message_string_field.cpp
test/endcode_decode/: CMakeLists.txt
test/endcode_decode/cme/: encode_decode.cpp
test/endcode_decode/cme_v13/: .gitignore  CMakeLists.txt  encode_decode.cpp
test/endcode_decode/common/: enum_field.h
test/endcode_decode/fixp/sbe-v1/: encode_decode.cpp
test/endcode_decode/fixp/sbe-v2-0-RC3/: CMakeLists.txt  README.md  composite_enum_field.cpp  composite_numeric_field.cpp  composite_string_field.cpp  encode_decode.cpp  message_numeric_field.cpp  message_string_field.cpp
test/endcode_decode/fixp/sbe-v2-0-RC3/message/: message_numeric_field.cpp  (+1 more)
test/endcode_decode/sbe-v1/: CMakeLists.txt  decode_sbe_v1.cpp  encode_decode.cpp
test/endcode_decode/sbe-v2-0-RC3/: encode_decode.cpp
test/endcode_decode/sbe-v2-0-RC3/composite/: composite_string_field.cpp
test/endcode_decode/sbe-v2-0-RC3/message/: message_enum_field.cpp  message_numeric_field.cpp  message_string_field.cpp
test/utility/: print_message.h  random_gen.h
(+1 files in other folders)
